--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <title>Document</title>
 </head>
 <body>
-  <div class="message">
+    <ul id="rudr_instafeed"></ul>
+    
+  <!-- <div class="message">
     Sorry, your browser does not support CSS Grid. 😅
   </div>
   <section class="section">
@@ -90,7 +93,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <script src="./main.js"></script>
 </body>
 </html>
