playing with the sizing of the grid

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     Sorry, your browser does not support CSS Grid. 😅
   </div>
   <section class="section">
-    <h1>Nom Nom Gallery</h1>
+    <h1>Kara Michelle Gallery</h1>
     <div class="grid">
       
     </div>
